--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Tran Tuan Anh</title>
+    <title>Tran Tuan Anh - Resume</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="avatar.jpg">
@@ -14,7 +14,7 @@
 <body>
     <!-- Navbar -->
     <nav class="Navbar">
-        <div class="l-Wrapper l-Wrapper--reset@sm-down">
+        <div class="l-Wrapper">
             <ul class="u-pullRight">
                 <li>
                     <a class="Navbar-btn Navbar-btn--main" href="https://drive.google.com/file/d/1r60C1abKLinDo3emwH5cGSOaMHYMmXip/view?usp=sharing">
@@ -47,7 +47,7 @@
                             Tuan Anh
                             <br> Tran
                         </span>
-                        <span class="Title-sub">Product Engineer</span>
+                        <span class="Title-sub">Software Engineer</span>
                     </h1>
                 </a>
             </div>
@@ -65,48 +65,33 @@
         </div>
         <!-- About -->
         <section class="l-Section">
-            <h2 class="l-Section-title h3 u-hidden@sm-down">About</h2>
+            <h2 class="l-Section-title h3">About</h2>
             <div class="l-Section-content">
-                <p>I'm a product engineer with a strong passionate in coding and learning things. I enjoy
-                    creating beautiful websites and web applications. Have good eyes for design and typography, high attention to
-                    detail. I have enough self-consciousness and patience to spend most time front of laptop to self-study with online resources, courses and reading blogs. <br><br>
-                    Creative, flexible and hardworking teamate.</p>
+                <p>I'm a product engineer with a strong passionate in coding and learning things. I enjoy creating
+                    beautiful websites and web applications. Have good eyes for design and typography, high
+                    attention to detail. I have enough self-consciousness and patience to spend most time front of
+                    laptop to self-study with online resources, courses and reading blogs.<br>
+                    <br>
+                    Creative, flexible and hardworking teamate.
+                </p>
             </div>
         </section>
-        <!-- Skills -->
+        <!-- Education -->
         <section class="l-Section">
-            <h2 class="l-Section-title h3">Skills</h2>
+            <h2 class="l-Section-title h3">Education</h2>
             <div class="l-Section-content">
-                <ul>
-                    <li>Highly skilled in creating performant
-                        <strong class="Tag">HTML</strong>,
-                        <strong class="Tag">CSS</strong>
-                    </li>
-                    <li>Proficient with
-                        <strong class="Tag">Ruby</strong>,
-                        <strong class="Tag">Ruby On Rails</strong> as Server Side,
-                        <strong class="Tag">JavaScript</strong>,
-                        <strong class="Tag">VueJS</strong> as Frontend Side
-                    </li>
-                    <li>Experienced with
-                        <strong class="Tag">Version Control Systems</strong> (Git),
-                        <strong class="Tag">Boostrap</strong>,
-                        <strong class="Tag">Terminal/ZSH</strong>,
-                        <strong class="Tag">MySQL</strong>,
-                        <strong class="Tag">Docker</strong>, and many
-                        <strong class="Tag">AWS Services</strong>
-                    </li>
-                    <li>Skilled in creating
-                        <strong class="Tag">Style Guides</strong>,
-                        <strong class="Tag">Responsive Web Development</strong> with a
-                        <strong class="Tag">Desktop First</strong> approach,
-                    </li>
-                    <li>Knowledgeable about
-                        <strong class="Tag">Adruino</strong>,
-                        <strong class="Tag">Data Structure & Algorithm</strong>, familar with
-                        <strong class="Tag">Maths</strong>
-                    </li>
-                </ul>
+                <div class="l-Section-group">
+                    <h3>Software Engineering</h3>
+                    <a class="u-link" href="https://hcmuni.fpt.edu.vn/">FPT University</a> (HCMC)
+                    <br>2017 - 2021
+                    <p>Gained 50% for 4-years Scholarship</p>
+                </div>
+                <div class="l-Section-group">
+                    <h3>IT Specialized Class</h3>
+                    <a class="u-link" href="http://www.thpt-lequydon-danang.edu.vn/">Le Quy Don Gifted High School</a> (Da Nang)
+                    <br>2014 - 2017
+                    <p>Graduated with GPA 8.5/10</p>
+                </div>
             </div>
         </section>
         <!-- Work Experience -->
@@ -115,37 +100,30 @@
             <div class="l-Section-content">
                 <div class="l-Section-group">
                     <h3>Product Engineer</h3>
-                    <a class="u-link" href="https://corp.raksul.com/en/">RAKSUL INC.</a> (HCMC)
+                    <a class="u-link" href="https://recruit-vn.raksul.com/">Raksul Vietnam</a> (HCMC)
                     <br>Aug 2020 – Now
-                    <p>
-                        Work with many teams (Avg. Team-size: 4+)<br>
-                        - Using Ruby On Rails to create microservices<br>
-                        - Involved to creating 2 products from beginning<br>
-                        - Learned VueJS and able to handle Frontend work as well<br>
-                        - Enhancing the performance on the running products
-                    </p>
+                    <ul>
+                        <li>Maintained the e-commerce site running in production: being involved in the code review
+                        process to build services for enhancing product, optimizing performance when fetching APIs</li>
+                        <li>Builded websites not only for partners (printing and posting) but also for admins to managing
+                        the process of orders</li>
+                        <li>Applied microservices architecture to have better scalabilities</li>
+                        <li>Started a MVP project to create QR codes and get track the scans of users</li>
+                        <li>Team-size: 2, 3, 4, 10+</li>
+                        <li>Technologies used: Ruby, Ruby On Rails, JavaScript, VueJS, Swagger, RESTful API, GraphQL,
+                        AWS Services (Lambda, S3, API Gateway), Docker, Jenkins</li>
+                    </ul>
                 </div>
                 <div class="l-Section-group">
-                    <h3>Web Development Intern</h3>
+                    <h3>Software Engineer Intern</h3>
                     <a class="u-link" href="https://www.actbrain-vn.com/">Act Brain Vietnam Corporation</a> (HCMC)
-                    <br>Sep 2019 – Dec 2019
-                    <p>
-                        Working with <strong class="Tag">BPOShinjin</strong> (Team-size: 10+)<br>
-                        - Write front-end and back-end code (using Zend Framework)<br>
-                        - Increase performance of queries<br>
-                        - Write PHP Unit Test<br>
-                        - Do Integration Test for other co-workers
-                    </p>
-                </div>
-                <div class="l-Section-group">
-                    <h3>Fresher Web Developer</h3>
-                    <a class="u-link" href="https://www.actbrain-vn.com/">Act Brain Vietnam Corporation</a> (HCMC)
-                    <br>Jan 2020 – Mar 2020
-                    <p>
-                        Participate in <strong class="Tag">Next Cafe</strong> (Team-size: 10+)<br>
-                        - Write PHP Unit Test<br>
-                        - Do Integration Test for other co-workers
-                    </p>
+                    <br>Sep 2019 – Mar 2020
+                    <ul>
+                        <li>Builded internal website for Employees Management</li>
+                        <li>Helped team increase test coverage</li>
+                        <li>Team-size: 10+</li>
+                        <li>Technologies used: PHP, Zend Framework, RESTful API</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -158,15 +136,8 @@
                     <a class="u-link" href="https://www.facebook.com/shecodesvietnam/">SheCodes Hackathon</a> (HCMC)
                     <br>Jun 2020 – July 2020 & July 2021 – July 2021
                     <p>
-                        SheCodes Vietnam is a non-profit organization that encourages women to participate in the field of Information Technology, thereby gradually closing the gender gap in this field.
-                    </p>
-                </div>
-                <div class="l-Section-group">
-                    <h3>Vice President of Club</h3>
-                    <a class="u-link" href="https://www.facebook.com/fptuhcmbasketballclub">FPT Basketball Club</a> (University)
-                    <br>Sep 2017 – Present
-                    <p>
-                        A basketball club in my university. I joined the club from the beginning. We practice hard and harder. And again, we won some tournaments. It is great to live with your passions.
+                        SheCodes Vietnam is a non-profit organization that encourages women to participate in the field
+                        of Information Technology, thereby gradually closing the gender gap in this field.
                     </p>
                 </div>
                 <div class="l-Section-group">
@@ -174,84 +145,10 @@
                     <a class="u-link" href="https://www.facebook.com/YCCLQD/">Young Creators Club</a> (High School)
                     <br>Sep 2015 – May 2017
                     <p>
-                        A club for young creators in my high school. I joined the club from the very first day of me in high school, with my passion for science and a lot of contributing to club's event, I've been promoted to the head of IT department.
+                        A club for young creators in my high school. I joined the club from the very first day of me in high
+                        school, with my passion for science and a lot of contributing to club's event, I've been promoted
+                        to the head of IT department.
                     </p>
-                </div>
-                <div class="l-Section-group">
-                    <h3>Co-Founder</h3>
-                    <a class="u-link" href="https://www.facebook.com/lacacousticlqd/">Lac Acoustic Club</a> (High School)
-                    <br>Sep 2016 – May 2017
-                    <p>
-                        An acoustic music club in my high school. I and my friends formed this club to have a place to play guitar, drums and share  with each other, and perform some mini-concerts in my school.
-                    </p>
-                </div>
-                <div class="l-Section-group">
-                    <h3>President of Club</h3>
-                    <a class="u-link" href="https://www.actbrain-vn.com/">AH-Team</a> (High School)
-                    <br>Sep 2016 – May 2017
-                    <p>
-                        A basketball club in my high school. I joined the club and participated many tournaments with team when I was a 1st year student. After got some medals, I was voted for the head position. We share our hobbies together, play together and win together.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <!-- Education -->
-        <section class="l-Section">
-            <h2 class="l-Section-title h3">Education</h2>
-            <div class="l-Section-content">
-                <div class="l-Section-group">
-                    <h3>Software Engineering</h3>
-                    <a class="u-link" href="https://hcmuni.fpt.edu.vn/">FPT University</a> (HCMC)
-                    <br>2017 - 2021
-                    <p>Currently Junior with 50% 4-years Scholarship</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3>IT Specialized Class</h3>
-                    <a class="u-link" href="http://www.thpt-lequydon-danang.edu.vn/">Le Quy Don Gifted High School</a> (Da Nang)
-                    <br>2014 - 2017
-                    <p>Graduated with GPA 8.5/10</p>
-                </div>
-            </div>
-        </section>
-        <!-- Projects -->
-        <section class="l-Section">
-            <h2 class="l-Section-title h3">Projects</h2>
-            <div class="l-Section-content">
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/yorkittran/yorkittran.github.io">yorkittran.github.io</a></h3>
-                    <p>Personal CV with HTML/CSS</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/so-lon/socfi">socfi</a></h3>
-                    <p>Soccer Field Management System, for Field Owner and Admin to manage booking, promotion, stadium, etc. using Laravel</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/so-lon/socfi-mobile">socfi-mobile</a></h3>
-                    <p>Mobile version for Soccer Field Management System, help Player (user) to find and book easily on their phone, using React Native</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/yorkittran/paper">paper</a></h3>
-                    <p>A Task Management App for PRM311 course, build by React Native</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/yorkittran/paper-api">paper-api</a></h3>
-                    <p>An API for Paper app to handle backend, using Laravel</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/smart-bots">The Smart Bots System</a></h3>
-                    <p>IoT project - cheap solution for smarthome, a network consists of multiple bots, helps people in control of electronics by attaching these bots onto the switch, button, plug,... instead of replaces them. Contest in many major competitions in Vietnam and won high prizes. Built on top of Laravel, NodeJS, and Arduino, Intel Edison.</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/yorkittran/concept">concept</a></h3>
-                    <p>A travel website - personal project for PRJ321, build on top of Java</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/contilfin/voyage">voyage</a></h3>
-                    <p>Discover, plan and book your perfect trip with expert advice, travel guides, destination</p>
-                </div>
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/yorkittran/coding-library">coding-library</a></h3>
-                    <p>A library of C/C++ source code</p>
                 </div>
             </div>
         </section>
@@ -260,6 +157,8 @@
             <h2 class="l-Section-title h3">Accomplishments</h2>
             <div class="l-Section-content">
                 <ul>
+                    <li><strong>1st Place</strong> at RAKSUL INC.'s Hackweek 2022</li>
+                    <li><strong>3rd Place</strong> at RAKSUL INC.'s Hackweek 2020</li>
                     <li><strong>1st Place</strong> at Viet Nam Science and Engineering Fair (ViSEF) Regional 2017</li>
                     <li><strong>1st Place</strong> at Group D3, Young Information and Technology Regional 2017</li>
                     <li><strong>2nd Place</strong> at Group D3, Young Information and Technology National 2017</li>
@@ -270,7 +169,50 @@
                 </ul>
             </div>
         </section>
-        <section class="l-Section"></section>
+        <!-- Skills -->
+        <section class="l-Section">
+            <h2 class="l-Section-title h3">Skills</h2>
+            <div class="l-Section-content">
+                <ul>
+                    <li>Languages: 
+                        <strong class="Tag">Ruby</strong>,
+                        <strong class="Tag">JavaScript</strong>,
+                        <strong class="Tag">Java</strong>
+                    </li>
+                    <li>Frameworks/Libraries: 
+                        <strong class="Tag">Ruby On Rails</strong>,
+                        <strong class="Tag">VueJS</strong>,
+                        <strong class="Tag">Hotwire</strong>
+                    </li>
+                    <li>Databases: 
+                        <strong class="Tag">MySQL</strong>,
+                        <strong class="Tag">PostgreSQL</strong>
+                    </li>
+                    <li>Tools: 
+                        <strong class="Tag">Git</strong>,
+                        <strong class="Tag">VSCode</strong>,
+                        <strong class="Tag">iTerm2</strong>,
+                        <strong class="Tag">Table Plus</strong>,
+                        <strong class="Tag">Slack</strong>,
+                        <strong class="Tag">Notion</strong>,
+                        <strong class="Tag">Swagger</strong>,
+                        <strong class="Tag">Jenkins</strong>
+                    </li>
+                    <li>APIs: 
+                        <strong class="Tag">GraphQL</strong>,
+                        <strong class="Tag">RESTful API</strong>
+                    </li>
+                    <li>Platforms: 
+                        <strong class="Tag">MacOS</strong>,
+                        <strong class="Tag">Linux</strong>,
+                        <strong class="Tag">Bash</strong>,
+                        <strong class="Tag">SSH</strong>,
+                        <strong class="Tag">Docker</strong>,
+                        <strong class="Tag">AWS Services</strong>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </article>
 </body>
 
