--- a/index.html
+++ b/index.html
@@ -99,9 +99,20 @@
             <h2 class="l-Section-title h3">Work Experience</h2>
             <div class="l-Section-content">
                 <div class="l-Section-group">
+                    <h3>Full-Stack Developer</h3>
+                    <a class="u-link" href="https://www.codelink.io/">CodeLink</a> (HCMC)
+                    <br>Oct 2022 - Feb 2023
+                    <ul>
+                        <li>Implement APIs and feature for mobile app</li>
+                        <li>Being involved in the code review process</li>
+                        <li>Team-size: 7</li>
+                        <li>Technologies used: Python, JavaScript, Flutter, NodeJS, NestJS, RESTful API</li>
+                    </ul>
+                </div>
+                <div class="l-Section-group">
                     <h3>Product Engineer</h3>
                     <a class="u-link" href="https://recruit-vn.raksul.com/">Raksul Vietnam</a> (HCMC)
-                    <br>Aug 2020 – Now
+                    <br>Aug 2020 – Oct 2022
                     <ul>
                         <li>Maintained the e-commerce site running in production: being involved in the code review
                         process to build services for enhancing product, optimizing performance when fetching APIs</li>
