feat: update baonoi

--- a/index.html
+++ b/index.html
@@ -131,13 +131,12 @@
               <!-- Baonoi -->
               <div class="l-Section-item">
                 <div class="l-Flex">
-                  <strong>
+                  <dt>
                     <a class="u-link" href="https://www.baonoi.ai/">Baonoi</a>
-                  </strong>
-                  <small
-                    >NodeJS, Flutter, ReactJS, Python, Firebase,
-                    PostgreSQL</small
-                  >
+                  </dt>
+                  <dd>
+                    NodeJS, Flutter, ReactJS, Python, Firebase, PostgreSQL
+                  </dd>
                 </div>
                 <p>
                   Baonoi is an audio news application that convert from many
