--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h2 class="l-Section-title h3">About</h2>
         <div class="l-Section-content">
           <p>
-            I am interested in building and improving software systems with 2
+            I am interested in building and improving software systems with 3
             years of experience in developing application. I’m now looking for
             opportunities to work in a high growth and challenging environment
             with a strong emphasis on engineering effort.
@@ -117,6 +117,109 @@
       <section class="l-Section">
         <h2 class="l-Section-title h3">Work Experience</h2>
         <div class="l-Section-content">
+          <!-- Raksul Vietnam -->
+          <div class="l-Section-group">
+            <h3>Backend Engineer</h3>
+            <a class="u-link" href="https://recruit-vn.raksul.com/">
+              Raksul Vietnam
+            </a>
+            (HCMC) <br />Apr 2023 – Present
+            <p>
+              Raksul is a fabless B2B platform builder. We aims to change the
+              world by reinventing legacy industry structures with the power of
+              the Internet.
+            </p>
+            <div class="l-Section-list">
+              <!-- Josys -->
+              <div class="l-Section-item">
+                <div class="l-Flex">
+                  <dt>
+                    <a class="u-link" href="https://en.josys.com/">Josys</a>
+                  </dt>
+                  <dd>Ruby on Rails, MySQL</dd>
+                </div>
+                <p>
+                  A complete cloud solution for IT Device & SaaS Management.
+                  Josys is leveraging HiTech to automate and simplify IT
+                  operations to support the employee lifecycle. The service has
+                  raised $32M in a Series A round led by Global Brain. As part
+                  of a team that had over 10 members, we collaborated on
+                  building, launching, and maintaining the core service.
+                </p>
+              </div>
+              <!-- Cutting cost with Lambda -->
+              <div class="l-Section-item">
+                <div class="l-Flex">
+                  <dt>Cutting cost with Lambda - Hackweek Edition</dt>
+                  <dd>NodeJS, Ruby on Rails, AWS</dd>
+                </div>
+                <p>
+                  We built the prototype in 3 days that processing images
+                  through Lambda functions instead of Workers running on ECs. I
+                  transformed logic from back-end to Lambda functions, and
+                  handled to redirect to API Gateway. As calculation, we saved
+                  about 2000$/month for the company if it successfully applied
+                  on other products. Therefore, we won the 1st prize of Value
+                  Award in Hackweek competition with held once a year by Raksul
+                  Headquarter.
+                </p>
+              </div>
+              <!-- Digital Product -->
+              <div class="l-Section-item">
+                <div class="l-Flex">
+                  <dt>Digital Product</dt>
+                  <dd>NodeJS, MySQL, AWS</dd>
+                </div>
+                <p>
+                  Digital Product is an application that allowed venue/ads
+                  owners to create QR codes and assign it to banner ads. Then it
+                  will be delivered to many different location and the owners
+                  can track the effectiveness of them. I built the prototype
+                  alone in 4 weeks using many AWSs to create a serverless
+                  application. After 6 months of testing, it proved successfully
+                  and was integrated into a bigger product.
+                </p>
+              </div>
+              <!-- Area Marketing -->
+              <div class="l-Section-item">
+                <div class="l-Flex">
+                  <dt>
+                    <a class="u-link" href="https://am.raksul.com/">
+                      Area Marketing
+                    </a>
+                  </dt>
+                  <dd>Ruby on Rails, VueJS, MySQL, GraphQL, Google APIs</dd>
+                </div>
+                <p>
+                  We were rebuilding a legacy service in modern Ruby on Rails to
+                  support further business expansion. I worked on an internal
+                  admins tool that allows our internal Raksul employees better
+                  efficiency in supporting both our customers and third-party
+                  suppliers. We aim to build a set of world-class internal tools
+                  that would allow us to scale our business without requiring a
+                  large increase in customer support team size.
+                </p>
+              </div>
+              <!-- PRO -->
+              <div class="l-Section-item">
+                <div class="l-Flex">
+                  <dt>PRO</dt>
+                  <dd>Ruby on Rails, VueJS, Python, MySQL</dd>
+                </div>
+                <p>
+                  Raksul PRO is a new business initiative that will allow other
+                  wholesale resellers to purchase and use Raksul's services. I
+                  worked in a team of 4 people to build, launch and maintain the
+                  service. Beside implementing features on back-end, I also have
+                  a chance to learn VueJS by helping create components and pages
+                  on front-end side. By using Python, we also create a crawler
+                  to make a comparison prices between competing company's
+                  products and ours.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- CodeLink -->
           <div class="l-Section-group">
             <h3>Full Stack Developer</h3>
             <a class="u-link" href="https://www.codelink.io/">CodeLink</a>
@@ -141,13 +244,14 @@
                 <p>
                   Baonoi is an audio news application that convert from many
                   famous online news in Vietnam. Although still in beta phase,
-                  it has around 1000 users using everyday. Mostly I focused on
+                  it has around 100 users using everyday. Mostly I focused on
                   back-end engineering, but in this project I also have a chance
                   to support team to do mobile stuffs.
                 </p>
               </div>
             </div>
           </div>
+          <!-- Raksul Vietnam -->
           <div class="l-Section-group">
             <h3>Backend Engineer</h3>
             <a class="u-link" href="https://recruit-vn.raksul.com/">
@@ -174,7 +278,7 @@
                   Novelty is a service of Raksul launched in 2020. Novelty
                   connects printing factory and merchandise seller to allow user
                   direct purchase of printed items from our EC platform. Since
-                  launch, the service has grown consistently over 300\%
+                  launch, the service has grown consistently over 300%
                   year-over-year. I was a part of a 10 members team to build,
                   launch and maintain the service.
                 </p>
